--- a/src/main/java/com/sts/stajyertakipsistem/GUI/StajyerListForm.form
+++ b/src/main/java/com/sts/stajyertakipsistem/GUI/StajyerListForm.form
@@ -114,7 +114,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="13" rowCount="19">
+              <Table columnCount="14" rowCount="19">
                 <Column editable="true" title="Ad Soyad" type="java.lang.Object"/>
                 <Column editable="true" title="Adres" type="java.lang.Object"/>
                 <Column editable="true" title="Telefon No" type="java.lang.Object"/>
@@ -128,10 +128,16 @@
                 <Column editable="true" title="B&#xf6;l&#xfc;m" type="java.lang.Object"/>
                 <Column editable="true" title="S&#x131;n&#x131;f" type="java.lang.Object"/>
                 <Column editable="true" title="Okul T&#xfc;r&#xfc;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x130;&#x15f; G&#xfc;n&#xfc;" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="1">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
